--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Media tree manager",
     "keywords": ["media"],
     "homepage": "http://joffreydemetz.com/git/media/",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "license": "MIT",
 
     "authors": [
@@ -18,18 +18,15 @@
 
     "require": {
         "php": ">=5.6",
-        "jdz/filesystem": "^1.0",
-        "jdz/helpers": "^1.0",
-        "jdz/tree": "^1.0",
-        "jdz/utilities": "^1.0"
+        "jdz/filesystem": "^1.1",
+        "jdz/helpers": "^1.1",
+        "jdz/tree": "^1.1",
+        "jdz/utilities": "^1.1"
     },
     
     "autoload": {
         "psr-4": {
-            "JDZ\\Media\\": ""
-        },
-        "exclude-from-classmap": [
-            "/Tests/"
-        ]
+            "JDZ\\Media\\": "src"
+        }
     }
 }
