--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "Media tree manager",
     "keywords": ["media"],
     "homepage": "https://github.com/joffreydemetz/media/",
-    "version": "1.2.1",
+    "version": "2.0.0",
     "license": "MIT",
 
     "authors": [
@@ -17,10 +17,11 @@
     ],
 
     "require": {
-        "jdz/filesystem": "^1.2",
-        "jdz/helpers": "^1.2",
-        "jdz/tree": "^1.2",
-        "jdz/utilities": "^1.2"
+        "php": "^7.1.3",
+        "jdz/filesystem": "^2.0",
+        "jdz/helpers": "^2.0",
+        "jdz/tree": "^2.0",
+        "jdz/utilities": "^2.0"
     },
     
     "autoload": {
